Newest changes. Links to all companies. New logos

--- a/index.html
+++ b/index.html
@@ -39,16 +39,6 @@
 		<!-- Main css -->
 		<link rel="stylesheet" href="css/style.css">
 
-		<!-- Vertical Nav -->
-		<!-- <link rel="stylesheet" href="css/reset.css"> -->
-		<link rel="stylesheet" href="css/vertNav.css"> <!-- Resource style -->
-
-		<script src="js/modernizr.js"></script> <!-- Modernizr -->
-		<script type="text/javascript">
-			var root = document.getElementsByTagName( 'html' )[0]; // '0' to assign the first (and only `HTML` tag)
-			root.setAttribute( 'class', 'no-touch' );
-		</script>
-
 <!-- Google Font -->
 <link href='https://fonts.googleapis.com/css?family=Poppins:400,500,600' rel='stylesheet' type='text/css'>
 
@@ -69,19 +59,6 @@
      NAVIGATION LINKS
 ============================== -->
 <a id="mlh-trust-badge"  href="https://mlh.io/seasons/na-2019/events?utm_source=na-hackathon&utm_medium=TrustBadge&utm_campaign=2019-season&utm_content=white" target="_blank"><img src="https://s3.amazonaws.com/logged-assets/trust-badge/2019/mlh-trust-badge-2019-white.svg" alt="Major League Hacking 2019 Hackathon Season" style="width:100%"></a>
-
-<nav class="cd-vertical-nav">
-	<ul>
-		<li><a href="#intro" class="active"><span class="label">Intro</span></a></li>
-		<li><a href="#overview"><span class="label">About</span></a></li>
-		<li><a href="#faq"><span class="label">FAQ</span></a></li>
-		<li><a href="#program"><span class="label">Schedule</span></a></li>
-		<li><a href="#speakers"><span class="label">Team</span></a></li>
-		<li><a href="#sponsors"><span class="label">Sponsors</span></a></li>
-	</ul>
-</nav><!-- .cd-vertical-nav -->
-
-<button class="cd-nav-trigger cd-image-replace">Open navigation<span aria-hidden="true"></span></button>
 
 <div class="navbar navbar-fixed-top custom-navbar" role="navigation">
 	<div class="container">
@@ -449,7 +426,7 @@
 
 		</div> -->
 
-		<h3 class="text-center">Coming Soon...</h3>
+		<h3 class="text-center wow fadeInUp" data-wow-delay="0.9s">Coming Soon...</h3>
 	</div>
 </section>
 
@@ -559,7 +536,7 @@
 					</div>
 				</a>
 
-				<a href="#">
+				<a href="http://linkedin.com/in/lanchauletran">
 					<div class="wow fadeInUp col-lg-2 col-md-2 col-sm-3 col-xs-6" data-wow-delay="0.6s">
 						<div class="speakers-wrapper">
 							<img src="images/team/lanchau_letran.png" class="img-responsive img-circle" alt="speakers">
@@ -594,84 +571,126 @@
 			</div>
 
 			<div class="row platinum">
-				<div class="image-container">
-					<img src="images/logo_centene.svg" />
-				</div>
-				<div class="image-container">
-					<img src="images/panera-logo.jpg" />
-				</div>
+				<a href="https://jobs.centene.com/">
+					<div class="image-container">
+						<img src="images/logo_centene.svg" />
+					</div>
+				</a>
+				<a href="https://jobs.panerabread.com/">
+					<div class="image-container">
+						<img src="images/panera-logo.jpg" />
+					</div>
+				</a>
 			</div>
 			<div class="row gold">
-				<div class="image-container">
-					<img src="images/sponsor_tradebot.jpg" />
-				</div>
-				<div class="image-container">
-					<img src="images/logo_mixmax.png" />
-				</div>
+				<a href="http://www.tradebot.com/careers.asp">
+					<div class="image-container">
+						<img src="images/sponsor_tradebot.jpg" />
+					</div>
+				</a>
+				<a href="https://mixmax.com/careers/">
+					<div class="image-container">
+						<img src="images/logo_mixmax.png" />
+					</div>
+				</a>
 			</div>
 			<div class="row silver">
-				<div class="image-container">
-					<img src="images/ecorp_blk_pc.jpg" />
-				</div>
-				<div class="image-container">
-					<img src="images/logo_edwardjones.png" />
-				</div>
-				<div class="image-container master">
-					<img src="images/mastercard-logo.png" />
-				</div>
-				<div class="image-container up">
-					<img src="images/up_logo.png" />
-				</div>
+				<a href="https://www.emerson.com/en-us/careers">
+					<div class="image-container">
+						<img src="images/ecorp_blk_pc.jpg" />
+					</div>
+				</a>
+				<a href="http://careers.edwardjones.com/index.html">
+					<div class="image-container">
+						<img src="images/logo_edwardjones.png" />
+					</div>
+				</a>
+				<a href="https://www.mastercard.us/en-us/about-mastercard/careers.html">
+					<div class="image-container master">
+						<img src="images/mastercard-logo.png" />
+					</div>
+				</a>
+				<a href="https://up.jobs/index.htm">
+					<div class="image-container up">
+						<img src="images/up_logo.png" />
+					</div>
+				</a>
 			</div>
 			<div class="row bronze">
-				<div class="image-container">
-					<img src="images/logo_balsamiq.png" />
-				</div>
+				<a href="https://balsamiq.com/company/jobs/">
+					<div class="image-container">
+						<img src="images/logo_balsamiq.png" />
+					</div>
+				</a>
 			</div>
 		</div>
 		<div class="row supporters">
 			<h3>{ Partners & Supporters }</h3>
 			<div class="row partners">
-				<div class="image-container">
-					<img src="images/mlh.png" />
-				</div>
-				<div class="image-container">
-					<img src="images/wolfram-logo.png" />
-				</div>
-				<div class="image-container">
-					<img src="images/sketch.png" />
-				</div>
-				<div class="image-container">
-					<img src="images/logo_jetbrains.png" />
-				</div>
+				<a href="https://mlh.io/">
+					<div class="image-container">
+						<img src="images/mlh.png" />
+					</div>
+				</a>
+				<a href="https://www.wolfram.com/language/">
+					<div class="image-container">
+						<img src="images/wolfram-logo.png" />
+					</div>
+				</a>
+				<a href="https://www.sketchapp.com/">
+					<div class="image-container">
+						<img src="images/sketch.png" />
+					</div>
+				</a>
+				<a href="https://www.jetbrains.com/">
+					<div class="image-container">
+						<img src="images/logo_jetbrains.png" />
+					</div>
+				</a>
 			</div>
 			<div class="row partners">
-				<div class="image-container">
-					<img src="images/sponsor_techdomains.png" />
-				</div>
-				<div class="image-container">
-					<img src="images/cs.png" />
-				</div>
-				<div class="image-container">
-					<img src="images/engineering.png" />
-				</div>
-				<div class="image-container">
-					<img src="images/coasb.png" />
-				</div>
+				<a href="https://get.tech">
+					<div class="image-container">
+						<img src="images/sponsor_techdomains.png" />
+					</div>
+				</a>
+				<a href="http://cs.mst.edu/">
+					<div class="image-container">
+						<img src="images/cs.png" />
+					</div>
+				</a>
+				<a href="https://cec.mst.edu/">
+					<div class="image-container">
+						<img src="images/engineering.png" />
+					</div>
+				</a>
+				<a href="https://casb.mst.edu/">
+					<div class="image-container">
+						<img src="images/coasb.png" />
+					</div>
+				</a>
 			</div>
-			<div class="row partners">
-				<div class="image-container">
-					<img src="images/placeholder.svg" />
-				</div>
-				<div class="image-container">
-					<img src="images/IT.png" />
-				</div>
-				<div class="image-container">
-					<img src="images/coer.png" />
-				</div>
-				<div class="image-container">
-					<img src="images/placeholder.svg" />
-				</div>
+			<div class="row partners last">
+				<a href="https://it.mst.edu/">
+					<div class="image-container">
+						<img src="images/IT.png" />
+					</div>
+				</a>
+				<a href="https://career.mst.edu/">
+					<div class="image-container">
+						<img src="images/coer.png" />
+					</div>
+				</a>
+				<a href="https://library.mst.edu/">
+					<div class="image-container" style="width: 11%;">
+						<img src="images/library.png" />
+					</div>
+				</a>
+				<a href="https://www.digitalocean.com/">
+					<div class="image-container">
+						<img src="images/digital_ocean.png" />
+					</div>
+				</a>
 			</div>
 		</div>
 
@@ -715,7 +734,6 @@
 <script src="js/custom.js"></script>
 <script src="js/smoothscroll.js"></script>
 <script src="js/timeCounter.js"></script>
-<script src="js/main.js"></script> <!-- Resource jQuery -->
 
 <script type="text/javascript">
   var Time = "3/01/2019 15:00:00";
