--- a/index.html
+++ b/index.html
@@ -81,13 +81,13 @@
 		<div class="row">
 
 			<div class="col-md-12 col-sm-12">
-				<img src="images/pickhacks.png" style="width: auto; height: 100px; margin-bottom: -10rem"/>
-				<h1 class="wow fadeInUp" data-wow-delay="0.6s">PICKHACKS</h1>
-				<h4 class="wow fadeInUp" data-wow-delay="1.1s"><a href="https://goo.gl/maps/D8yMcL9eAaN2" class="havener-link">Havener Center</a></h4>
-				<h4 class="wow fadeInUp" data-wow-delay="1.1s">Missouri S&T</h4>
-				<h4 class="wow fadeInUp" data-wow-delay="1.1s">March 1 - 3, 2019 </h4>
-				<div class="timer wow fadeInUp" data-wow-delay="1.6s"></div>
-				<a href="http://eepurl.com/dxi4Vb" target="_blank" class="btn btn-lg btn-default smoothScroll wow fadeInUp" data-wow-delay="2.1s">SUBSCRIBE FOR UPDATES</a>
+				<img src="images/pickhacks.png" class="wow fadeInUp" data-wow-delay="0.6s" style="width: auto; height: 100px; margin-bottom: -10rem"/>
+				<h1 class="wow fadeInUp" data-wow-delay="1.1s">PICKHACKS</h1>
+				<h4 class="wow fadeInUp" data-wow-delay="1.6s"><a href="https://goo.gl/maps/D8yMcL9eAaN2" class="havener-link">Havener Center</a></h4>
+				<h4 class="wow fadeInUp" data-wow-delay="1.6s">Missouri S&T</h4>
+				<h4 class="wow fadeInUp" data-wow-delay="1.6s">March 1 - 3, 2019 </h4>
+				<div class="timer wow fadeInUp" data-wow-delay="2.1s"></div>
+				<a href="http://eepurl.com/dxi4Vb" target="_blank" class="btn btn-lg btn-default smoothScroll wow fadeInUp" data-wow-delay="2.6s">SUBSCRIBE FOR UPDATES</a>
 				<!--<a href="#register" class="btn btn-lg btn-danger smoothScroll wow fadeInUp" data-wow-delay="2.3s">SPONSOR US</a>-->
 			</div>
 
@@ -570,7 +570,7 @@
 				</div>
 			</div>
 
-			<div class="row platinum">
+			<div class="row platinum wow fadeInUp" data-wow-delay="0.6s">
 				<a href="https://jobs.centene.com/">
 					<div class="image-container">
 						<img src="images/logo_centene.svg" />
@@ -582,7 +582,7 @@
 					</div>
 				</a>
 			</div>
-			<div class="row gold">
+			<div class="row gold wow fadeInUp" data-wow-delay="0.6s">
 				<a href="http://www.tradebot.com/careers.asp">
 					<div class="image-container">
 						<img src="images/sponsor_tradebot.jpg" />
@@ -594,7 +594,7 @@
 					</div>
 				</a>
 			</div>
-			<div class="row silver">
+			<div class="row silver wow fadeInUp" data-wow-delay="0.6s">
 				<a href="https://www.emerson.com/en-us/careers">
 					<div class="image-container">
 						<img src="images/ecorp_blk_pc.jpg" />
@@ -616,7 +616,7 @@
 					</div>
 				</a>
 			</div>
-			<div class="row bronze">
+			<div class="row bronze wow fadeInUp" data-wow-delay="0.6s">
 				<a href="https://balsamiq.com/company/jobs/">
 					<div class="image-container">
 						<img src="images/logo_balsamiq.png" />
@@ -626,7 +626,7 @@
 		</div>
 		<div class="row supporters">
 			<h3>{ Partners & Supporters }</h3>
-			<div class="row partners">
+			<div class="row partners wow fadeInUp" data-wow-delay="0.6s">
 				<a href="https://mlh.io/">
 					<div class="image-container">
 						<img src="images/mlh.png" />
@@ -648,7 +648,7 @@
 					</div>
 				</a>
 			</div>
-			<div class="row partners">
+			<div class="row partners wow fadeInUp" data-wow-delay="0.6s">
 				<a href="https://get.tech">
 					<div class="image-container">
 						<img src="images/sponsor_techdomains.png" />
@@ -670,7 +670,7 @@
 					</div>
 				</a>
 			</div>
-			<div class="row partners last">
+			<div class="row partners last wow fadeInUp" data-wow-delay="0.6s">
 				<a href="https://it.mst.edu/">
 					<div class="image-container">
 						<img src="images/IT.png" />
