--- a/index.html
+++ b/index.html
@@ -39,6 +39,15 @@
 		<!-- Main css -->
 		<link rel="stylesheet" href="css/style.css">
 
+		<!-- Vertical Nav -->
+		<!-- <link rel="stylesheet" href="css/reset.css"> -->
+		<link rel="stylesheet" href="css/vertNav.css"> <!-- Resource style -->
+ 		<script src="js/modernizr.js"></script> <!-- Modernizr -->
+		<script type="text/javascript">
+			var root = document.getElementsByTagName( 'html' )[0]; // '0' to assign the first (and only `HTML` tag)
+			root.setAttribute( 'class', 'no-touch' );
+		</script>
+
 <!-- Google Font -->
 <link href='https://fonts.googleapis.com/css?family=Poppins:400,500,600' rel='stylesheet' type='text/css'>
 
@@ -75,8 +84,19 @@
 <!-- =========================
     INTRO SECTION
 ============================== -->
+<nav class="cd-vertical-nav">
+	<ul>
+		<li><a href="#intro" class="active"><span class="label">Intro</span></a></li>
+		<li><a href="#overview"><span class="label">About</span></a></li>
+		<li><a href="#faq"><span class="label">FAQ</span></a></li>
+		<li><a href="#program"><span class="label">Schedule</span></a></li>
+		<li><a href="#speakers"><span class="label">Team</span></a></li>
+		<li><a href="#sponsors"><span class="label">Sponsors</span></a></li>
+	</ul>
+</nav><!-- .cd-vertical-nav -->
+ <button class="cd-nav-trigger cd-image-replace">Open navigation<span aria-hidden="true"></span></button>
 
-<section id="intro" class="parallax-section">
+<section id="intro" class="parallax-section cd-section">
 	<div class="container" style="margin-top: -15rem">
 		<div class="row">
 
@@ -100,7 +120,7 @@
 <!-- =========================
     OVERVIEW SECTION
 ============================== -->
-<section id="overview" class="parallax-section">
+<section id="overview" class="parallax-section cd-section">
 	<div class="container">
 		<div class="row">
 
@@ -138,7 +158,7 @@
 <!-- =========================
     FAQ SECTION
 ============================== -->
-<section id="faq" class="parallax-section">
+<section id="faq" class="parallax-section cd-section">
 	<div class="container">
 		<div class="row">
 
@@ -253,7 +273,7 @@
 <!--=========================
     PROGRAM SECTION
 ==============================-->
-<section id="program" class="parallax-section">
+<section id="program" class="parallax-section cd-section">
 	<div class="container">
 		<div class="row">
 
@@ -435,7 +455,7 @@
 <!-- =========================
 		TEAM SECTION
 ============================== -->
-<section id="speakers" class="parallax-section">
+<section id="speakers" class="parallax-section cd-section">
 	<div class="container">
 		<div class="row">
 
@@ -556,7 +576,7 @@
 <!-- =========================
     SPONSORS SECTION
 ============================== -->
-<section id="sponsors">
+<section id="sponsors" class="cd-section">
 	<div class="container">
 		<div class="row">
 			<h3>{ Industry Sponsors }</h3>
@@ -734,6 +754,7 @@
 <script src="js/custom.js"></script>
 <script src="js/smoothscroll.js"></script>
 <script src="js/timeCounter.js"></script>
+<script src="js/main.js"></script> <!-- Resource jQuery -->
 
 <script type="text/javascript">
   var Time = "3/01/2019 15:00:00";
