--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 
 			<div class="col-md-12 col-sm-12">
 				<img src="images/pickhacks.png" class="wow fadeInUp" data-wow-delay="0.6s" style="width: auto; height: 100px; margin-bottom: -10rem"/>
-				<h1 class="wow fadeInUp" data-wow-delay="1.1s">PICKHACKS</h1>
+				<h1 class="wow fadeInUp" data-wow-delay="1.1s"><span style="font-weight:normal">PICK</span><span style="font-weight:bolder">HACKS</span></h1>
 				<h4 class="wow fadeInUp" data-wow-delay="1.6s"><a href="https://goo.gl/maps/D8yMcL9eAaN2" class="havener-link">Havener Center</a></h4>
 				<h4 class="wow fadeInUp" data-wow-delay="1.6s">Missouri S&T</h4>
 				<h4 class="wow fadeInUp" data-wow-delay="1.6s">March 1 - 3, 2019 </h4>
