--- a/index.html
+++ b/index.html
@@ -712,6 +712,28 @@
 					</div>
 				</a>
 			</div>
+			<div class="row partners last wow fadeInUp" data-wow-delay="0.6s">
+				<a>
+					<div class="image-container">
+						<img src="images/placeholder.svg" />
+					</div>
+				</a>
+				<a href="">
+					<div class="image-container">
+						<img src="images/acm.png" />
+					</div>
+				</a>
+				<a href="">
+					<div class="image-container" style="width: 11%;">
+						<img src="images/acmw.png" />
+					</div>
+				</a>
+				<a>
+					<div class="image-container">
+						<img src="images/placeholder.svg" />
+					</div>
+				</a>
+			</div>
 		</div>
 
 	</div>
