Layout overhaul of sponsors

--- a/index.html
+++ b/index.html
@@ -579,13 +579,15 @@
 <section id="sponsors" class="cd-section">
 	<div class="container">
 		<div class="row">
-			<h3>{ Industry Sponsors }</h3>
+			<div class="section-title">
+				<h2>[ Industry Sponsors ]</h2>
+			</div>
 
 			<div class="row">
 
 				<div class="wow bounceIn col-md-12 col-sm-12" style="z-index: 1000">
 					<div>
-						<h3>Interested in sponsoring? Drop us a line at <a href="mailto:pickhacks@mst.edu">pickhacks@mst.edu!</a></h4>
+						<h4 style="text-transform: uppercase">Interested in sponsoring? Drop us a line at <a href="mailto:pickhacks@mst.edu">pickhacks@mst.edu!</a></h4>
 					</div>
 				</div>
 			</div>
@@ -609,22 +611,24 @@
 					</div>
 				</a>
 				<a href="https://mixmax.com/careers/">
-					<div class="image-container">
+					<div class="image-container" style="margin-top: -2%">
 						<img src="images/logo_mixmax.png" />
 					</div>
 				</a>
 			</div>
-			<div class="row silver wow fadeInUp" data-wow-delay="0.6s">
+			<div class="row silver wow fadeInUp" data-wow-delay="0.6s" style="margin-bottom: 4%;">
 				<a href="https://www.emerson.com/en-us/careers">
-					<div class="image-container">
+					<div class="image-container" style="margin-right: 0">
 						<img src="images/ecorp_blk_pc.jpg" />
 					</div>
 				</a>
 				<a href="http://careers.edwardjones.com/index.html">
-					<div class="image-container">
+					<div class="image-container" style="width: 30%; margin-top: 1%">
 						<img src="images/logo_edwardjones.png" />
 					</div>
 				</a>
+			</div>
+			<div class="row silver wow fadeInUp" data-wow-delay="0.6s" style="margin-bottom: 4%;">
 				<a href="https://www.mastercard.us/en-us/about-mastercard/careers.html">
 					<div class="image-container master">
 						<img src="images/mastercard-logo.png" />
@@ -637,19 +641,48 @@
 				</a>
 			</div>
 			<div class="row bronze wow fadeInUp" data-wow-delay="0.6s">
+				<a>
+					<div class="image-container">
+						<img src="images/placeholder.svg" />
+					</div>
+				</a>
 				<a href="https://balsamiq.com/company/jobs/">
 					<div class="image-container">
 						<img src="images/logo_balsamiq.png" />
 					</div>
 				</a>
+				<a>
+					<div class="image-container">
+						<img src="images/placeholder.svg" />
+					</div>
+				</a>
 			</div>
 		</div>
 		<div class="row supporters">
-			<h3>{ Partners & Supporters }</h3>
-			<div class="row partners wow fadeInUp" data-wow-delay="0.6s">
+			<div class="section-title">
+				<h2>[ Partners & Supporters ]</h2>
+			</div>
+			<div class="row partners wow fadeInUp first" data-wow-delay="0.6s">
 				<a href="https://mlh.io/">
 					<div class="image-container">
 						<img src="images/mlh.png" />
+					</div>
+				</a>
+				<a href="">
+					<div class="image-container" style="width: 10%">
+						<img src="images/acm.png" />
+					</div>
+				</a>
+				<a href="">
+					<div class="image-container" style="width: 15%;">
+						<img src="images/acmw.png" />
+					</div>
+				</a>
+			</div>
+			<div class="row partners wow fadeInUp" data-wow-delay="0.6s">
+				<a href="https://get.tech">
+					<div class="image-container">
+						<img src="images/sponsor_techdomains.png" />
 					</div>
 				</a>
 				<a href="https://www.wolfram.com/language/">
@@ -668,10 +701,10 @@
 					</div>
 				</a>
 			</div>
-			<div class="row partners wow fadeInUp" data-wow-delay="0.6s">
-				<a href="https://get.tech">
+			<div class="row partners last wow fadeInUp" data-wow-delay="0.6s">
+				<a href="https://www.digitalocean.com/">
 					<div class="image-container">
-						<img src="images/sponsor_techdomains.png" />
+						<img src="images/digital_ocean.png" />
 					</div>
 				</a>
 				<a href="http://cs.mst.edu/">
@@ -690,42 +723,20 @@
 					</div>
 				</a>
 			</div>
-			<div class="row partners last wow fadeInUp" data-wow-delay="0.6s">
-				<a href="https://it.mst.edu/">
-					<div class="image-container">
-						<img src="images/IT.png" />
-					</div>
-				</a>
+			<div class="row partners wow fadeInUp" data-wow-delay="0.6s">
 				<a href="https://career.mst.edu/">
 					<div class="image-container">
 						<img src="images/coer.png" />
 					</div>
 				</a>
+				<a href="https://it.mst.edu/">
+					<div class="image-container">
+						<img src="images/IT.png" />
+					</div>
+				</a>
 				<a href="https://library.mst.edu/">
-					<div class="image-container" style="width: 11%;">
+					<div class="image-container" style="width: 14%">
 						<img src="images/library.png" />
-					</div>
-				</a>
-				<a href="https://www.digitalocean.com/">
-					<div class="image-container">
-						<img src="images/digital_ocean.png" />
-					</div>
-				</a>
-			</div>
-			<div class="row partners last wow fadeInUp" data-wow-delay="0.6s">
-				<a>
-					<div class="image-container">
-						<img src="images/placeholder.svg" />
-					</div>
-				</a>
-				<a href="">
-					<div class="image-container">
-						<img src="images/acm.png" />
-					</div>
-				</a>
-				<a href="">
-					<div class="image-container" style="width: 11%;">
-						<img src="images/acmw.png" />
 					</div>
 				</a>
 				<a>
