--- a/index.html
+++ b/index.html
@@ -126,11 +126,9 @@
 
 			<div class="wow fadeInUp col-sm-12 text-center" style="margin-bottom: 4rem" data-wow-delay="0.4s">
 				<div class="section-title">
-					<h2>Flex Your Brain!</h2>
+					<h2>READY TO FLEX YOUR BRAIN?</h2>
 				</div>
-				<p>PickHacks is a place for exploration. You will have 48 hours to delve into your curiosities, learn something new, and make something awesome.
-					With world-class mentors and 300+ fellow hackers, you're in for an amazing time. Whether you’re a seasoned hacker or completely new to the world of hacking,
-					we’ll have something for you. If you're ready for an adventure, we'll see you by the campfire!
+				<p>PickHacks brings together 300 of the brightest minds around the nation for 36 hours of building, collaboration, and fun. Whether you’re a hacker veteran or first time student, come learn something new and create an awesome project!
 				</p>
 				<div class="wow fadeInUp col-md-offset-3 col-md-2 col-sm-3 col-xs-4 info-offset" data-wow-delay="0.6s">
 					<div class="info" style="margin-right: 30%; background-color: #036084;">
@@ -177,13 +175,13 @@
    						<div class="panel-heading" role="tab" id="headingOne">
       						<h4 class="panel-title">
         						<a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
-          							 Who can attend?
+          							 What happens at a hackathon?
         						</a>
       						</h4>
     					</div>
    						<div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
       						<div class="panel-body">
-        						<p>All undergraduate, graduate, and high school students from any school are welcome. If you are under 18, we’ll need a parental consent form.</p>
+        						<p>We like to think of hackathons as “invention marathons.” You (the hacker) will spend 36 hours building projects (hacks) in teams of 1 - 4 people. Come with an idea, and we’ll provide everything you need to turn that idea into reality — hardware, mentors, food, you name it.</p>
       						</div>
    						 </div>
  					</div>
@@ -192,13 +190,13 @@
    						<div class="panel-heading" role="tab" id="headingTwo">
       						<h4 class="panel-title">
         						<a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-          							I don’t have a team. Can I still participate?
+          							Is there a theme?
         						</a>
       						</h4>
     					</div>
    						<div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
       						<div class="panel-body">
-                            	<p>Of course! It is absolutely not necessary to have a team prior to coming. We’ll have some fun team-forming sessions at the beginning where you can find an awesome group of people to work with. You’re welcome to have up to four people on a team.</p>
+                            	<p>PickHacks aims to bring a new and refreshing theme every year to attract a variety of students and projects. This year, our focus is athletics; from health technology to sports analytics, the possibilities are endless.</p>
       						</div>
    						 </div>
  					</div>
@@ -207,13 +205,13 @@
    						<div class="panel-heading" role="tab" id="headingThree">
       						<h4 class="panel-title">
         						<a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-          							What should I bring?
+          							What if I don’t know how to code?
         						</a>
       						</h4>
     					</div>
    						<div id="collapseThree" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
       						<div class="panel-body">
-                            	<p>Your valid student ID, laptop, phone, chargers, any sleeping equipment you might want (we'll be providing air mattresses), and lots of excitement!</p>
+                            	<p>No need to worry! We’ll be running workshops to help beginners learn new technologies and get you started. We’ll also have mentors on hand to help you out in the process.</p>
       						</div>
    						 </div>
  					 </div>
@@ -222,13 +220,13 @@
     						<div class="panel-heading" role="tab" id="headingFour">
        						<h4 class="panel-title">
          						<a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
-           							What if I don't know how to code?
+           							I don’t have a team or an idea. Can I still participate?
          						</a>
        						</h4>
      					</div>
     						<div id="collapseFour" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingFour">
        						<div class="panel-body">
-                             	<p>No worries!</p>
+                             	<p>Of course! We have team building and design thinking workshops planned to help get your creative juices flowing.</p>
        						</div>
     						 </div>
   					 </div>
@@ -237,13 +235,13 @@
 	    						<div class="panel-heading" role="tab" id="headingFive">
 	       						<h4 class="panel-title">
 	         						<a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
-	           							How can I get there?
+	           							How do I apply?
 	         						</a>
 	       						</h4>
 	     					</div>
 	    						<div id="collapseFive" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingFive">
 	       						<div class="panel-body">
-	                             	<p>Car, bus, train, plane -- however you want. We’ll also be sending busses to select schools around the Midwest.</p>
+	                             	<p>Applications will open in January 2019. Make sure to subscribe to our mailing list to be the first to know when registration opens!</p>
 	       						</div>
 	    						 </div>
 	  					 </div>
@@ -252,16 +250,107 @@
 		    						<div class="panel-heading" role="tab" id="headingSix">
 		       						<h4 class="panel-title">
 		         						<a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseSix" aria-expanded="false" aria-controls="collapseSix">
-		           							Is there travel reimbursement?
+		           							I'm under 18 years of age, can I attend?
 		         						</a>
 		       						</h4>
 		     					</div>
 		    						<div id="collapseSix" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingSix">
 		       						<div class="panel-body">
-		                             	<p>We’re currently working on allocating our budget to enable as many people to attend as possible. Stay tuned and we’ll let you know closer to the event date.</p>
+		                             	<p>If you’re enrolled in high school, we’d still love to have you! We’ll have forms closer to the event date that we’ll need you to fill out to make sure you’re all good to hack.</p>
 		       						</div>
 		    						 </div>
 		  					 </div>
+
+								 <div class="panel panel-default">
+			    						<div class="panel-heading" role="tab" id="headingSeven">
+			       						<h4 class="panel-title">
+			         						<a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseSeven" aria-expanded="false" aria-controls="collapseSeven">
+			           							How can I get there?
+			         						</a>
+			       						</h4>
+			     					</div>
+			    						<div id="collapseSeven" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingSeven">
+			       						<div class="panel-body">
+			                             	<p>If you’re around the Midwest area, we’re more than likely sending a bus to a campus near you; we’ll release schedules closer to the event. You’re also more than welcome to drive!</p>
+			       						</div>
+			    						 </div>
+			  					 </div>
+
+									 <div class="panel panel-default">
+				    						<div class="panel-heading" role="tab" id="headingEight">
+				       						<h4 class="panel-title">
+				         						<a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseEight" aria-expanded="false" aria-controls="collapseEight">
+				           							Is there travel reimbursement?
+				         						</a>
+				       						</h4>
+				     					</div>
+				    						<div id="collapseEight" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingEight">
+				       						<div class="panel-body">
+				                             	<p>Due to us sending buses, travel reimbursement will be limited to a case-by-case basis. That said, don’t let cost decide your attendance; we’ll evaluate your application and get back to you if we can help you!</p>
+				       						</div>
+				    						 </div>
+				  					 </div>
+
+										 <div class="panel panel-default">
+					    						<div class="panel-heading" role="tab" id="headingNine">
+					       						<h4 class="panel-title">
+					         						<a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseNine" aria-expanded="false" aria-controls="collapseNine">
+					           							How much does it cost?
+					         						</a>
+					       						</h4>
+					     					</div>
+					    						<div id="collapseNine" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingNine">
+					       						<div class="panel-body">
+					                             	<p>Zero. Zilch. Nada. Thanks to our generous sponsors, the entire event is free!
+</p>
+					       						</div>
+					    						 </div>
+					  					 </div>
+
+											 <div class="panel panel-default">
+						    						<div class="panel-heading" role="tab" id="headingTen">
+						       						<h4 class="panel-title">
+						         						<a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseTen" aria-expanded="false" aria-controls="collapseTen">
+						           							What should I bring?
+						         						</a>
+						       						</h4>
+						     					</div>
+						    						<div id="collapseTen" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTen">
+						       						<div class="panel-body">
+						                             	<p>Bring a student ID, laptop + charger, and personal items (clothing, hygiene products, etc.)</p>
+						       						</div>
+						    						 </div>
+						  					 </div>
+
+												 <div class="panel panel-default">
+							    						<div class="panel-heading" role="tab" id="headingEleven">
+							       						<h4 class="panel-title">
+							         						<a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseEleven" aria-expanded="false" aria-controls="collapseEleven">
+							           							Where will I sleep?
+							         						</a>
+							       						</h4>
+							     					</div>
+							    						<div id="collapseEleven" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingEleven">
+							       						<div class="panel-body">
+							                             	<p>We’ll have dedicated sleeping areas for hackers. There will be a limited supply of air mattresses available, but bring a sleeping bag if you can!</p>
+							       						</div>
+							    						 </div>
+							  					 </div>
+
+													 <div class="panel panel-default">
+								    						<div class="panel-heading" role="tab" id="headingTwelve">
+								       						<h4 class="panel-title">
+								         						<a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseTwelve" aria-expanded="false" aria-controls="collapseTwelve">
+								           							I can’t find my question here.
+								         						</a>
+								       						</h4>
+								     					</div>
+								    						<div id="collapseTwelve" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwelve">
+								       						<div class="panel-body">
+								                             	<p>No problem! Feel free to send us a message at <a href="mailto:pickhacks@mst.edu">pickhacks@mst.edu</a>.</p>
+								       						</div>
+								    						 </div>
+								  					 </div>
 
  				 </div>
 			</div>
