--- a/index.html
+++ b/index.html
@@ -814,7 +814,7 @@
 			</div>
 			<div class="row partners wow fadeInUp" data-wow-delay="0.6s">
 				<a href="https://career.mst.edu/">
-					<div class="image-container">
+					<div class="image-container" style="margin-left: -3%;">
 						<img src="images/coer.png" />
 					</div>
 				</a>
@@ -824,7 +824,7 @@
 					</div>
 				</a>
 				<a href="https://library.mst.edu/">
-					<div class="image-container" style="width: 14%">
+					<div class="image-container" style="width: 10%">
 						<img src="images/library.png" />
 					</div>
 				</a>
