--- a/index.html
+++ b/index.html
@@ -763,7 +763,7 @@
 				</a>
 				<a href="">
 					<div class="image-container" style="width: 15%;">
-						<img src="images/acmw.png" />
+						<img src="images/acmw.PNG" />
 					</div>
 				</a>
 			</div>
