--- a/index.html
+++ b/index.html
@@ -711,7 +711,7 @@
 					</div>
 				</a>
 				<a href="http://careers.edwardjones.com/index.html">
-					<div class="image-container" style="width: 30%; margin-top: 1%">
+					<div class="image-container" style="width: 35%; margin-top: 1.5%; margin-left: 5%">
 						<img src="images/logo_edwardjones.png" />
 					</div>
 				</a>
@@ -791,7 +791,7 @@
 			</div>
 			<div class="row partners last wow fadeInUp" data-wow-delay="0.6s">
 				<a href="https://www.digitalocean.com/">
-					<div class="image-container">
+					<div class="image-container" style="width: 11%">
 						<img src="images/digital_ocean.png" />
 					</div>
 				</a>
@@ -878,7 +878,7 @@
 <script src="js/main.js"></script> <!-- Resource jQuery -->
 
 <script type="text/javascript">
-  var Time = "3/01/2019 15:00:00";
+  var Time = "3/01/2019 16:00:00";
   setInterval(function() { countDown(".timer", Time) }, 1000);
 </script>
 
