--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
 
 		<title>PickHacks 2019</title>
 
+		<link rel="shortcut icon" href="images/pickhacks.ico">
+
 		<!-- Materialize for Tables -->
 		<link rel="stylesheet" href="css/materialize.css" />
 
