--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 </nav><!-- .cd-vertical-nav -->
  <button class="cd-nav-trigger cd-image-replace">Open navigation<span aria-hidden="true"></span></button>
 
-<section id="intro" class="parallax-section cd-section">
+<section id="intro" class="cd-section">
 	<div class="container" style="margin-top: -15rem">
 		<div class="row">
 
@@ -122,7 +122,7 @@
 <!-- =========================
     OVERVIEW SECTION
 ============================== -->
-<section id="overview" class="parallax-section cd-section">
+<section id="overview" class="cd-section">
 	<div class="container">
 		<div class="row">
 
@@ -158,7 +158,7 @@
 <!-- =========================
     FAQ SECTION
 ============================== -->
-<section id="faq" class="parallax-section cd-section">
+<section id="faq" class="cd-section">
 	<div class="container">
 		<div class="row">
 
@@ -364,7 +364,7 @@
 <!--=========================
     PROGRAM SECTION
 ==============================-->
-<section id="program" class="parallax-section cd-section">
+<section id="program" class="cd-section">
 	<div class="container">
 		<div class="row">
 
@@ -545,7 +545,7 @@
 <!-- =========================
 		TEAM SECTION
 ============================== -->
-<section id="speakers" class="parallax-section cd-section">
+<section id="speakers" class="cd-section">
 	<div class="container">
 		<div class="row">
 
@@ -871,7 +871,6 @@
 ============================== -->
 <script src="js/jquery.js"></script>
 <script src="js/bootstrap.min.js"></script>
-<script src="js/jquery.parallax.js"></script>
 <script src="js/owl.carousel.min.js"></script>
 <script src="js/wow.min.js"></script>
 <script src="js/custom.js"></script>
