--- a/index.html
+++ b/index.html
@@ -873,6 +873,7 @@
 <script src="js/bootstrap.min.js"></script>
 <script src="js/owl.carousel.min.js"></script>
 <script src="js/wow.min.js"></script>
+<script src="js/jquery.parallax.js"></script>
 <script src="js/custom.js"></script>
 <script src="js/smoothscroll.js"></script>
 <script src="js/timeCounter.js"></script>
