--- a/index.html
+++ b/index.html
@@ -708,12 +708,12 @@
 			</div>
 			<div class="row silver wow fadeInUp" data-wow-delay="0.6s" style="margin-bottom: 4%;">
 				<a href="https://www.emerson.com/en-us/careers">
-					<div class="image-container" style="margin-right: 0">
+					<div class="image-container" style="margin-right: -10%; margin-top: 2%">
 						<img src="images/ecorp_blk_pc.jpg" />
 					</div>
 				</a>
 				<a href="http://careers.edwardjones.com/index.html">
-					<div class="image-container" style="width: 35%; margin-top: 1.5%; margin-left: 5%">
+					<div class="image-container" style="width: 25%; margin-top: 1.5%; margin-left: 5%">
 						<img src="images/logo_edwardjones.png" />
 					</div>
 				</a>
