Sponsor links open in new tab

--- a/index.html
+++ b/index.html
@@ -683,48 +683,48 @@
 			</div>
 
 			<div class="row platinum wow fadeInUp" data-wow-delay="0.6s">
-				<a href="https://jobs.centene.com/">
+				<a href="https://jobs.centene.com/" target="_blank">
 					<div class="image-container">
 						<img src="images/logo_centene.svg" />
 					</div>
 				</a>
-				<a href="https://jobs.panerabread.com/">
+				<a href="https://jobs.panerabread.com/" target="_blank">
 					<div class="image-container">
 						<img src="images/panera-logo.jpg" />
 					</div>
 				</a>
 			</div>
 			<div class="row gold wow fadeInUp" data-wow-delay="0.6s">
-				<a href="http://www.tradebot.com/careers.asp">
+				<a href="http://www.tradebot.com/careers.asp" target="_blank">
 					<div class="image-container">
 						<img src="images/sponsor_tradebot.jpg" />
 					</div>
 				</a>
-				<a href="https://mixmax.com/careers/">
+				<a href="https://mixmax.com/careers/" target="_blank">
 					<div class="image-container" style="margin-top: -2%">
 						<img src="images/logo_mixmax.png" />
 					</div>
 				</a>
 			</div>
 			<div class="row silver wow fadeInUp" data-wow-delay="0.6s" style="margin-bottom: 4%;">
-				<a href="https://www.emerson.com/en-us/careers">
+				<a href="https://www.emerson.com/en-us/careers" target="_blank">
 					<div class="image-container" style="margin-right: -10%; margin-top: 2%">
 						<img src="images/ecorp_blk_pc.jpg" />
 					</div>
 				</a>
-				<a href="http://careers.edwardjones.com/index.html">
+				<a href="http://careers.edwardjones.com/index.html" target="_blank">
 					<div class="image-container" style="width: 25%; margin-top: 1.5%; margin-left: 5%">
 						<img src="images/logo_edwardjones.png" />
 					</div>
 				</a>
 			</div>
 			<div class="row silver wow fadeInUp" data-wow-delay="0.6s" style="margin-bottom: 4%;">
-				<a href="https://www.mastercard.us/en-us/about-mastercard/careers.html">
+				<a href="https://www.mastercard.us/en-us/about-mastercard/careers.html" target="_blank">
 					<div class="image-container master">
 						<img src="images/mastercard-logo.png" />
 					</div>
 				</a>
-				<a href="https://up.jobs/index.htm">
+				<a href="https://up.jobs/index.htm" target="_blank">
 					<div class="image-container up">
 						<img src="images/up_logo.png" />
 					</div>
@@ -736,7 +736,7 @@
 						<img src="images/placeholder.svg" />
 					</div>
 				</a>
-				<a href="https://balsamiq.com/company/jobs/">
+				<a href="https://balsamiq.com/company/jobs/" target="_blank">
 					<div class="image-container">
 						<img src="images/logo_balsamiq.png" />
 					</div>
@@ -753,78 +753,78 @@
 				<h2>[ Partners & Supporters ]</h2>
 			</div>
 			<div class="row partners wow fadeInUp first" data-wow-delay="0.6s">
-				<a href="https://mlh.io/">
+				<a href="https://mlh.io/" target="_blank">
 					<div class="image-container">
 						<img src="images/mlh.png" />
 					</div>
 				</a>
-				<a href="https://acm.mst.edu/">
+				<a href="https://acm.mst.edu/" target="_blank">
 					<div class="image-container" style="width: 10%">
 						<img src="images/acm.png" />
 					</div>
 				</a>
-				<a href="">
+				<a href="http://mst.orgsync.com/org/acmw/" target="_blank">
 					<div class="image-container" style="width: 15%;">
 						<img src="images/acmw.PNG" />
 					</div>
 				</a>
 			</div>
 			<div class="row partners wow fadeInUp" data-wow-delay="0.6s">
-				<a href="https://get.tech">
+				<a href="https://get.tech" target="_blank">
 					<div class="image-container">
 						<img src="images/sponsor_techdomains.png" />
 					</div>
 				</a>
-				<a href="https://www.wolfram.com/language/">
+				<a href="https://www.wolfram.com/language/" target="_blank">
 					<div class="image-container">
 						<img src="images/wolfram-logo.png" />
 					</div>
 				</a>
-				<a href="https://www.sketchapp.com/">
+				<a href="https://www.sketchapp.com/" target="_blank">
 					<div class="image-container">
 						<img src="images/sketch.png" />
 					</div>
 				</a>
-				<a href="https://www.jetbrains.com/">
+				<a href="https://www.jetbrains.com/" target="_blank">
 					<div class="image-container">
 						<img src="images/logo_jetbrains.png" />
 					</div>
 				</a>
 			</div>
 			<div class="row partners last wow fadeInUp" data-wow-delay="0.6s">
-				<a href="https://www.digitalocean.com/">
+				<a href="https://www.digitalocean.com/" target="_blank">
 					<div class="image-container" style="width: 11%">
 						<img src="images/digital_ocean.png" />
 					</div>
 				</a>
-				<a href="http://cs.mst.edu/">
+				<a href="http://cs.mst.edu/" target="_blank">
 					<div class="image-container">
 						<img src="images/cs.png" />
 					</div>
 				</a>
-				<a href="https://cec.mst.edu/">
+				<a href="https://cec.mst.edu/" target="_blank">
 					<div class="image-container">
 						<img src="images/engineering.png" />
 					</div>
 				</a>
-				<a href="https://casb.mst.edu/">
+				<a href="https://casb.mst.edu/" target="_blank">
 					<div class="image-container">
 						<img src="images/coasb.png" />
 					</div>
 				</a>
 			</div>
 			<div class="row partners wow fadeInUp" data-wow-delay="0.6s">
-				<a href="https://career.mst.edu/">
+				<a href="https://career.mst.edu/" target="_blank">
 					<div class="image-container" style="margin-left: -3%;">
 						<img src="images/coer.png" />
 					</div>
 				</a>
-				<a href="https://it.mst.edu/">
+				<a href="https://it.mst.edu/" target="_blank">
 					<div class="image-container">
 						<img src="images/IT.png" />
 					</div>
 				</a>
-				<a href="https://library.mst.edu/">
+				<a href="https://library.mst.edu/" target="_blank">
 					<div class="image-container" style="width: 10%">
 						<img src="images/library.png" />
 					</div>
