--- a/index.html
+++ b/index.html
@@ -183,7 +183,8 @@
     					</div>
    						<div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
       						<div class="panel-body">
-        						<p>We like to think of hackathons as “invention marathons.” You (the hacker) will spend 36 hours building projects (hacks) in teams of 1 - 4 people. Come with an idea, and we’ll provide everything you need to turn that idea into reality — hardware, mentors, food, you name it.</p>
+        						<p>We like to think of hackathons as “invention marathons.” You (the hacker) will spend 36 hours building projects (hacks) in teams of 1 - 4 people. Come with an idea, and we’ll provide everything you need to turn that idea into reality — hardware, mentors, food, you name it.<br /><br />
+										We like to think of hackathons as “invention marathons.” You (the hacker) will spend 36 hours building projects (hacks) in teams of 1 - 4 people. Come with an idea, and we’ll provide everything you need to turn that idea into reality — hardware, mentors, food, you name it. There is also a Code of Conduct. <a href="http://mlh.io/code-of-conduct">Check it out here.</a></p>
       						</div>
    						 </div>
  					</div>
@@ -353,21 +354,6 @@
 								       						</div>
 								    						 </div>
 								  					 </div>
-
-														 <div class="panel panel-default">
-									    						<div class="panel-heading" role="tab" id="headingThirteen">
-									       						<h4 class="panel-title">
-									         						<a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseThirteen" aria-expanded="false" aria-controls="collapseThirteen">
-									           							What happens at a hackathon?
-									         						</a>
-									       						</h4>
-									     					</div>
-									    						<div id="collapseThirteen" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThirteen">
-									       						<div class="panel-body">
-									                             	<p>We like to think of hackathons as “invention marathons.” You (the hacker) will spend 36 hours building projects (hacks) in teams of 1 - 4 people. Come with an idea, and we’ll provide everything you need to turn that idea into reality — hardware, mentors, food, you name it. There is also a Code of Conduct. <a href="http://mlh.io/code-of-conduct">Check it out here.</a></p>
-									       						</div>
-									    						 </div>
-									  					 </div>
 
  				 </div>
 			</div>
