--- a/index.html
+++ b/index.html
@@ -670,7 +670,7 @@
 	<div class="container">
 		<div class="row">
 			<div class="section-title">
-				<h2>[ Industry Sponsors ]</h2>
+				<h2>[ Our Sponsors ]</h2>
 			</div>
 
 			<div class="row">
@@ -682,159 +682,104 @@
 				</div>
 			</div>
 
-			<div class="row platinum wow fadeInUp" data-wow-delay="0.6s">
-				<a href="https://jobs.centene.com/" target="_blank">
-					<div class="image-container">
-						<img src="images/logo_centene.svg" />
-					</div>
-				</a>
-				<a href="https://jobs.panerabread.com/" target="_blank">
-					<div class="image-container">
-						<img src="images/panera-logo.jpg" />
-					</div>
-				</a>
+			<div class="industry">
+				<div class="image-container centene">
+					<img src="images/sponsor_centene.jpg" />
+				</div>
+				<div class="image-container panera">
+					<img src="images/panera-logo.png" />
+				</div>
+				<div class="image-container es">
+					<img src="images/escript.png" />
+				</div>
 			</div>
-			<div class="row gold wow fadeInUp" data-wow-delay="0.6s">
-				<a href="http://www.tradebot.com/careers.asp" target="_blank">
-					<div class="image-container">
-						<img src="images/sponsor_tradebot.jpg" />
-					</div>
-				</a>
-				<a href="https://mixmax.com/careers/" target="_blank">
-					<div class="image-container" style="margin-top: -2%">
-						<img src="images/logo_mixmax.png" />
-					</div>
-				</a>
+
+			<div class="industry-mid">
+				<div class="image-container tradebot">
+					<img src="images/sponsor_tradebot.jpg" />
+				</div>
+				<div class="image-container mixmax">
+					<img src="images/logo_mixmax.png" />
+				</div>
 			</div>
-			<div class="row silver wow fadeInUp" data-wow-delay="0.6s" style="margin-bottom: 4%;">
-				<a href="https://www.emerson.com/en-us/careers" target="_blank">
-					<div class="image-container" style="margin-right: -10%; margin-top: 2%">
-						<img src="images/ecorp_blk_pc.jpg" />
-					</div>
-				</a>
-				<a href="http://careers.edwardjones.com/index.html">
-					<div class="image-container" style="width: 25%; margin-top: 2.5%; margin-left: 5%">
-						<img src="images/logo_edwardjones.png" />
-					</div>
-				</a>
+
+			<div class="industry-other">
+				<div class="image-container master">
+					<img src="images/mastercard-logo.png" />
+				</div>
+				<div class="image-container union">
+					<img src="images/up_logo.png" />
+				</div>
+				<div class="image-container edward">
+					<img src="images/logo_edwardjones.png" />
+				</div>
+				<div class="image-container labs">
+					<img src="images/1904logo.png" />
+				</div>
+				<div class="image-container rr">
+					<img src="images/rrlogo.png" />
+				</div>
+				<div class="image-container hw">
+					<img src="images/hw.png" />
+				</div>
+				<div class="image-container git">
+					<img src="images/gh.png" />
+				</div>
+				<div class="image-container emerson">
+					<img src="images/emerson.png" />
+				</div>
+				<div class="image-container eng">
+					<img src="images/eng.png" />
+				</div>
 			</div>
-			<div class="row silver wow fadeInUp" data-wow-delay="0.6s" style="margin-bottom: 4%;">
-				<a href="https://www.mastercard.us/en-us/about-mastercard/careers.html" target="_blank">
-					<div class="image-container master">
-						<img src="images/mastercard-logo.png" />
-					</div>
-				</a>
-				<a href="https://up.jobs/index.htm" target="_blank">
-					<div class="image-container up">
-						<img src="images/up_logo.png" />
-					</div>
-				</a>
+
+			<div class="industry-small">
+				<div class="image-container balsamiq">
+					<img src="images/logo_balsamiq.png" />
+				</div>
+				<div class="image-container brewer">
+					<img src="images/bs.png" />
+				</div>
+				<div class="image-container cs">
+					<img src="images/cs.png" />
+				</div>
+				<div class="image-container coab">
+					<img src="images/coab.png" />
+				</div>
+				<div class="image-container it">
+					<img src="images/it.png" />
+				</div>
 			</div>
-			<div class="row bronze wow fadeInUp" data-wow-delay="0.6s">
-				<a>
-					<div class="image-container">
-						<img src="images/placeholder.svg" />
-					</div>
-				</a>
-				<a href="https://balsamiq.com/company/jobs/" target="_blank">
-					<div class="image-container">
-						<img src="images/logo_balsamiq.png" />
-					</div>
-				</a>
-				<a>
-					<div class="image-container">
-						<img src="images/placeholder.svg" />
-					</div>
-				</a>
+
+			<hr />
+
+			<div class="partners">
+				<div class="image-container mlh">
+					<img src="images/mlh.png" />
+				</div>
+				<div class="image-container acm">
+					<img src="images/acm.png" />
+				</div>
+				<div class="image-container acm-w">
+					<img src="images/acmw.PNG" />
+				</div>
+				<div class="image-container jet">
+					<img src="images/logo_jetbrains.png" />
+				</div>
+				<div class="image-container tech">
+					<img src="images/sponsor_techdomains.png" />
+				</div>
+				<div class="image-container wolfram">
+					<img src="images/wolfram-logo.png" />
+				</div>
+				<div class="image-container sketch">
+					<img src="images/sketch.png" />
+				</div>
+				<div class="image-container do">
+					<img src="images/do.png" />
+				</div>
 			</div>
-		</div>
-		<div class="row supporters">
-			<div class="section-title">
-				<h2>[ Partners & Supporters ]</h2>
-			</div>
-			<div class="row partners wow fadeInUp first" data-wow-delay="0.6s">
-				<a href="https://mlh.io/" target="_blank">
-					<div class="image-container">
-						<img src="images/mlh.png" />
-					</div>
-				</a>
-				<a href="https://acm.mst.edu/" target="_blank">
-					<div class="image-container" style="width: 10%">
-						<img src="images/acm.png" />
-					</div>
-				</a>
-				<a href="http://mst.orgsync.com/org/acmw/" target="_blank">
-					<div class="image-container" style="width: 15%;">
-						<img src="images/acmw.PNG" />
-					</div>
-				</a>
-			</div>
-			<div class="row partners wow fadeInUp" data-wow-delay="0.6s">
-				<a href="https://get.tech" target="_blank">
-					<div class="image-container">
-						<img src="images/sponsor_techdomains.png" />
-					</div>
-				</a>
-				<a href="https://www.wolfram.com/language/" target="_blank">
-					<div class="image-container">
-						<img src="images/wolfram-logo.png" />
-					</div>
-				</a>
-				<a href="https://www.sketchapp.com/" target="_blank">
-					<div class="image-container">
-						<img src="images/sketch.png" />
-					</div>
-				</a>
-				<a href="https://www.jetbrains.com/" target="_blank">
-					<div class="image-container">
-						<img src="images/logo_jetbrains.png" />
-					</div>
-				</a>
-			</div>
-			<div class="row partners last wow fadeInUp" data-wow-delay="0.6s">
-				<a href="https://www.digitalocean.com/" target="_blank">
-					<div class="image-container" style="width: 11%">
-						<img src="images/digital_ocean.png" />
-					</div>
-				</a>
-				<a href="http://cs.mst.edu/" target="_blank">
-					<div class="image-container">
-						<img src="images/cs.png" />
-					</div>
-				</a>
-				<a href="https://cec.mst.edu/" target="_blank">
-					<div class="image-container">
-						<img src="images/engineering.png" />
-					</div>
-				</a>
-				<a href="https://casb.mst.edu/" target="_blank">
-					<div class="image-container">
-						<img src="images/coasb.png" />
-					</div>
-				</a>
-			</div>
-			<div class="row partners wow fadeInUp" data-wow-delay="0.6s">
-				<a href="https://career.mst.edu/" target="_blank">
-					<div class="image-container" style="margin-left: -3%;">
-						<img src="images/coer.png" />
-					</div>
-				</a>
-				<a href="https://it.mst.edu/" target="_blank">
-					<div class="image-container">
-						<img src="images/IT.png" />
-					</div>
-				</a>
-				<a href="https://library.mst.edu/" target="_blank">
-					<div class="image-container" style="width: 10%">
-						<img src="images/library.png" />
-					</div>
-				</a>
-				<a>
-					<div class="image-container">
-						<img src="images/placeholder.svg" />
-					</div>
-				</a>
-			</div>
+
 		</div>
 
 	</div>
