--- a/index.html
+++ b/index.html
@@ -747,7 +747,7 @@
 					<img src="images/coab.png" />
 				</div>
 				<div class="image-container it">
-					<img src="images/it.png" />
+					<img src="images/info.png" />
 				</div>
 			</div>
 
