--- a/index.html
+++ b/index.html
@@ -767,7 +767,7 @@
 						<img src="images/logo_balsamiq.png" />
 					</div>
 				</a>
-				<a href="" target="_blank">
+				<a href="https://www.brewerscience.com/about-us/company/careers/job-postings/" target="_blank">
 					<div class="image-container brewer">
 						<img src="images/bs.png" />
 					</div>
