--- a/index.html
+++ b/index.html
@@ -791,8 +791,8 @@
 
 		</div>
 
-		<div class="section-title" style="margin-top: 4.5rem">
-			<h2>[ Our Sponsors ]</h2>
+		<div class="section-title" style="margin-top: 5.5rem">
+			<h2>[ Our Partners ]</h2>
 		</div>
 
 		<div class="row">
