--- a/index.html
+++ b/index.html
@@ -667,7 +667,7 @@
     SPONSORS SECTION
 ============================== -->
 <section id="sponsors" class="cd-section">
-	<div class="container">
+	<div class="container showDesktop">
 		<div class="row">
 			<div class="section-title">
 				<h2>[ Our Sponsors ]</h2>
@@ -750,8 +750,12 @@
 					<img src="images/info.png" />
 				</div>
 			</div>
+		</div>
 
-			<hr />
+		<div class="row">
+			<div class="section-title" style="clear: both">
+				<h2>[ Our Partners ]</h2>
+			</div>
 
 			<div class="partners">
 				<div class="image-container mlh">
@@ -782,6 +786,109 @@
 
 		</div>
 
+	</div>
+	<div class="container showMobile">
+		<div class="section-title">
+			<h2>[ Our Sponsors ]</h2>
+		</div>
+
+		<div class="row">
+
+			<div class="wow bounceIn col-md-12 col-sm-12" style="z-index: 1000">
+				<div>
+					<h4 style="text-transform: uppercase">Interested in sponsoring? Drop us a line at <a href="mailto:pickhacks@mst.edu">pickhacks@mst.edu!</a></h4>
+				</div>
+			</div>
+		</div>
+
+		<div class="image-container centene">
+			<img src="images/sponsor_centene.jpg" />
+		</div>
+		<div class="image-container panera">
+			<img src="images/panera-logo.png" />
+		</div>
+		<div class="image-container es">
+			<img src="images/escript.png" />
+		</div>
+
+		<div class="image-container tradebot">
+			<img src="images/sponsor_tradebot.jpg" />
+		</div>
+		<div class="image-container mixmax">
+			<img src="images/logo_mixmax.png" />
+		</div>
+
+		<div class="image-container master">
+			<img src="images/mastercard-logo.png" />
+		</div>
+		<div class="image-container union">
+			<img src="images/up_logo.png" />
+		</div>
+		<div class="image-container edward">
+			<img src="images/logo_edwardjones.png" />
+		</div>
+		<div class="image-container labs">
+			<img src="images/1904logo.png" />
+		</div>
+		<div class="image-container rr">
+			<img src="images/rrlogo.png" />
+		</div>
+		<div class="image-container hw">
+			<img src="images/hw.png" />
+		</div>
+		<div class="image-container git">
+			<img src="images/gh.png" />
+		</div>
+		<div class="image-container emerson">
+			<img src="images/emerson.png" />
+		</div>
+		<div class="image-container eng">
+			<img src="images/eng.png" />
+		</div>
+
+		<div class="image-container balsamiq">
+			<img src="images/logo_balsamiq.png" />
+		</div>
+		<div class="image-container brewer">
+			<img src="images/bs.png" />
+		</div>
+		<div class="image-container cs">
+			<img src="images/cs.png" />
+		</div>
+		<div class="image-container coab">
+			<img src="images/coab.png" />
+		</div>
+		<div class="image-container it">
+			<img src="images/info.png" />
+		</div>
+		<div class="section-title" style="clear: both; margin-top: 10rem">
+			<h2>[ Our Partners ]</h2>
+		</div>
+
+		<div class="image-container mlh">
+			<img src="images/mlh.png" />
+		</div>
+		<div class="image-container acm">
+			<img src="images/acm.png" />
+		</div>
+		<div class="image-container acm-w">
+			<img src="images/acmw.PNG" />
+		</div>
+		<div class="image-container jet">
+			<img src="images/logo_jetbrains.png" />
+		</div>
+		<div class="image-container tech">
+			<img src="images/sponsor_techdomains.png" />
+		</div>
+		<div class="image-container wolfram">
+			<img src="images/wolfram-logo.png" />
+		</div>
+		<div class="image-container sketch">
+			<img src="images/sketch.png" />
+		</div>
+		<div class="image-container do">
+			<img src="images/do.png" />
+		</div>
 	</div>
 </section>
 
